objects/RegexExample__c.object
<CustomObject><fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>TEST_AccountNumber__c</fullName>
        <label>TEST__AccountNumber</label>
        <type>AutoNumber</type>
    </fields><fields>
        <fullName>TEST_Price__c</fullName>
        <label>TEST__Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>TEST_Quantity__c</fullName>
        <label>TEST__Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>RegexExample</label><nameField>
        <label>RegexExample Name</label>
        <type>Text</type>
    </nameField><pluralLabel>RegexExamples</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>